<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total">Bill Total:</string>
    <string name="tip_percent">Tip %:</string>
    <string name="ten">10%</string>
    <string name="fifteen">15%</string>
    <string name="eighteen">18%</string>
    <string name="custom">Custom</string>
    <string name="custom_text">Custom:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="exit">Exit</string>
    <string name="hint">Enter Bill Value</string>
    <string name="twenty">20%</string>
</resources>